<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Funtivity</string>
    <string name="gcm_sender_id">id:543423061769</string>
    <string name="facebook_app_id">125701149404527</string>
    <string name="fb_login_protocol_scheme">fb125701149404527</string>
    <string name="notification_channel_id" translatable="false">funtivity_channel_id</string>
    <string name="notification_channel_name" translatable="true">funtivity_channel_name</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CLOSE">CLOSE</string>
    <string name="Error">Error</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="NA">N/A</string>
    <string name="NO">NO</string>
    <string name="OK">OK</string>
    <string name="Okay">Okay</string>
    <string name="Success">Success</string>
    <string name="Warning">Warning</string>
    <string name="YES">YES</string>
    <string name="delete">Delete</string>
    <string name="on_board_a">Welcome\nTo Funtivity</string>
    <string name="on_board_b">If you\'re looking to meet someone to do any activity like fishing, sports, yoga, etc.\nIn your area then you have come to the right app</string>
    <string name="on_board_c">Sign up now and start meeting other people!</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="do_not_show_again">Don\'t show again</string>
    <string name="login">Login</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><![CDATA[<u>Forgot Password?<u>]]></string>
    <string name="not_registered_sign_up">Not registered? <![CDATA[<b><u>Sign Up!</u></b>]]></string>
    <string name="valid_No_email_password">Please enter your email and password.</string>
    <string name="valid_No_email">Please enter email.</string>
    <string name="valid_Invalid_email">Email address is invalid.</string>
    <string name="valid_No_password">Please enter password.</string>
    <string name="banned_label">Sorry, you are banned.</string>
    <string name="admin_account_label">This is admin account. Please use web admin panel.</string>
    <string name="invalid_incorrect_password">Password entered is incorrect.</string>
    <string name="social_login_success">You have successfully logged in.</string>
    <string name="invalid_social_login">Error encountered during authentication. Please try again.</string>
    <string name="valid_Invalid_register_email">Your email address is already registered.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_label">Put in your email address so we can send you a password reset link.</string>
    <string name="success_forgot_password">We have sent a password reset link to your email.</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="already_have_account_sign_in">Already have an account? <![CDATA[<b><u>Sign In</u></b>]]></string>
    <string name="valid_No_first_name">Please enter your first name.</string>
    <string name="valid_No_last_name">Please enter your last name.</string>
    <string name="valid_Invalid_short_password">Password should be at least 6 characters.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="valid_No_confirm_password">Please enter confirm password.</string>
    <string name="valid_Invalid_password">Passwords do not match. Please check and try again</string>
    <string name="successfully_register">You have successfully register.</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_new_photo">Take a new photo</string>
    <string name="select_gallery">Select from gallery</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="label_log_out">Are you sure you want to log out?</string>
    <string name="all_meetups">All Meetups</string>
    <string name="private_">Private</string>
    <string name="my_meetups">My Meetups</string>
    <string name="no_meetup">No Meetup</string>
    <string name="no_user">No User</string>
    <string name="no_friend">No Friend</string>
    <string name="no_message">No Message</string>
    <string name="no_notification">No Notification</string>
    <string name="create_meetup">Create Meetup</string>
    <string name="edit_meetup">Edit Meetup</string>
    <string name="meetup_name">Meetup Name</string>
    <string name="activity_category">Activity Category</string>
    <string name="dd_mm_yy">MM/dd/YY</string>
    <string name="hh_mm_am">HH:MM AM</string>
    <string name="number_guests">Number of Guests</string>
    <string name="sex">Sex</string>
    <string name="description">Description</string>
    <string name="kind">Kind</string>
    <string name="age_bracket">Age Bracket</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="tap_upload_photos">Tap to Upload Photos</string>
    <string name="valid_No_meetup_name">Please enter meetup name.</string>
    <string name="valid_No_activity_category">Please enter activity category.</string>
    <string name="valid_No_date">Please enter date.</string>
    <string name="valid_No_time">Please enter time.</string>
    <string name="valid_Invalid_date_current">Date must be =&gt; Current Date.</string>
    <string name="valid_No_guests">Please enter number of guests.</string>
    <string name="valid_No_sex">Please choose sex.</string>
    <string name="valid_No_description">Please enter description.</string>
    <string name="valid_No_kind">Please choose kind.</string>
    <string name="valid_No_photo">Please choose photo.</string>
    <string name="confirm_delete_meetup">Are you sure you want to delete this meetup?</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_sex">Choose Sex</string>
    <string name="choose_kind">Choose Kind</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="meetup_creator">Meetup Creator</string>
    <string name="interested">Interested</string>
    <string name="going">Going</string>
    <string name="join_requests">Join Requests</string>
    <string name="ratings_reviews">Ratings and Reviews</string>
    <string name="write_review_"><![CDATA[<u>Write Review</u>]]></string>
    <string name="write_review">Write Review</string>
    <string name="write_a_review">Write a review</string>
    <string name="tap_star_rate">Tap a star to rate</string>
    <string name="type_something_here">Type something here…</string>
    <string name="tap_upload_photo_video">Tap to Upload Photo or Video</string>
    <string name="tap_upload_photo">Tap to Upload Photo</string>
    <string name="valid_No_message">Please enter message.</string>
    <string name="valid_No_rate">Please tap a star to rate.</string>
    <string name="activies">Activies</string>
    <string name="outdoor_activities">Outdoor Activities</string>
    <string name="view_all_meetups">View All Joined Meetups</string>
    <string name="view_all_messages">View All Messages</string>
    <string name="add_friends">Add to Friends</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="send_message">Send a Message</string>
    <string name="confirm_delete_message">Are you sure you want to delete this message?</string>
    <string name="enter_message">Enter message here</string>
    <string name="insert_message">Please enter message.</string>
    <string name="valid_Invalid_message_long">Message is too long. Please check and try again.</string>
    <string name="notification_chat">%1$s sent new message: %2$s</string>
    <string name="report">Report</string>
    <string name="post">Post</string>
    <string name="enter_text">Please enter text…</string>
    <string name="valid_No_text">Please enter text.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="tap_to_go_event_details">Tap to go to Event Details.</string>
    <string name="notification_friend_request">%1$s sent friend request.</string>
    <string name="notification_friend_accepted">%1$s accepted your friend request.</string>
    <string name="notification_friend_declined">%1$s declined your friends request.</string>
    <string name="notification_interested_event">%1$s is interested in an event!</string>
    <string name="notification_join_request">%1$s sent join request.</string>
    <string name="notification_join_accepted">%1$s accepted your join request.</string>
    <string name="notification_join_declined">%1$s declined your join request.</string>
    <string name="notification_friend_remove">%1$s has removed you as friend.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="rate_app">Rate App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="about_app">About the App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="upload_photo_"><![CDATA[<u>Upload Photo</u>]]></string>
    <string name="interests">Interests</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="bio">Bio</string>
    <string name="valid_No_interests">Please enter your interests.</string>
    <string name="valid_No_location">Please enter your location.</string>
    <string name="valid_No_age">Please enter your age.</string>
    <string name="valid_No_bio">Please enter your bio.</string>
    <string name="save">Save</string>
    <string name="about_label">"
        <![CDATA[
            <p>Funtivity is a social networking app for enthusiasts of fun and outdoor activities seeking for other individuals who shares similar likes and objective. The app enables user to meet other people to do activities such as but not limited to watching or playing sports, fitness, food & beverage, movies, music & art, health & beauty and outdoor activities including camping, hiking, fishing, yoga, etc.</p>
            <p>A list of meetup events within the area are available for users to view and attend. Meteups may be created, made private and public. The meetup event’s details, event author, participants and friends list can be viewed within the app. Users may select one or more activity categories for the meetup and can even send the invitations again to remind attendees of the upcoming meetup. A messaging function, list of events user is invited to, voice call and video call function are also ready for users to make use of.</p>
            <p>After an event, users has the option to write reviews and attach photos and videos of the event. Users can choose profile themes with 8 colors/font themes targeting men, women, sports fans, beauty, fashion and others.</p>
        ]]>
    "</string>
</resources>