<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@color/orange" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_large"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <com.brainyapps.funtivity.ui.view.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="@dimen/image_large"
                android:layout_height="@dimen/image_large"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/ic_upload_photo" />
            <EditText
                android:id="@+id/edt_first_name"
                style="@style/normalEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:hint="@string/first_name"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/edt_last_name"
                style="@style/normalEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/last_name"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/edt_email"
                style="@style/normalEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/edt_password"
                style="@style/normalEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/normalEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/btn_sign_up"
                style="@style/normalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_extra_large"
                android:layout_marginRight="@dimen/margin_extra_large"
                android:text="@string/create_account" />
            <TextView
                android:id="@+id/txt_signin"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:textColor="@color/blue_dark"
                android:text="@string/already_have_account_sign_in"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>