<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layout_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/orange">
        <TextView
            style="@style/normalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/reset_password_label" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:padding="@dimen/margin_large"
        android:orientation="vertical" >
        <EditText
            android:id="@+id/edt_email"
            style="@style/normalEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
        <Button
            android:id="@+id/btn_reset_password"
            style="@style/normalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_extra_large"
            android:text="@string/reset_password" />
    </LinearLayout>
</LinearLayout>